--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,13 +28,11 @@ jobs:
       - name: Run tests
         shell: powershell
         run: |
-          # cd C:\actions-runner\_work\OMPK\OMPK        
-          # [Environment]::SetEnvironmentVariable('JAVA_HOME','C:\Program Files\Java\jdk-21')
           mvn clean test
         if: always()
 
-      - name: Generate an Allure report
-        shell: powershell
-        run: cd C:\allure\allure-2.27.0\bin;
-          .\allure generate "C:\actions-runner\_work\OMPK\OMPK\target\allure-results" --clean;
-        if: always()
+      - name: Download results
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-results
+          path: target/allure-results
