--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
         if: always()
 
       - name: Download results
-        uses: actions/download-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: target/allure-results
