--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,9 @@ jobs:
           java-version: '21'
           distribution: 'oracle'
 
+      - name: Install Allure
+        run: choco install allure
+
       - name: Run tests
         shell: powershell
         run: |
@@ -36,3 +39,12 @@ jobs:
         with:
           name: allure-results
           path: target/allure-results
+
+      - name: Generate Allure Report
+        run: allure generate --clean
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
