--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,8 @@ jobs:
           $env:SCOOP='C:\Users\runneradmin\scoop'
           $env:PATH="$env:SCOOP\shims;$env:PATH"
           scoop install allure
+          [Environment]::SetEnvironmentVariable('PATH', $env:SCOOP + '\\apps\\allure\\current\\bin;' + [Environment]::GetEnvironmentVariable('PATH', [EnvironmentVariableTarget]::Machine), [EnvironmentVariableTarget]::Machine)
+          refreshenv
 
       - name: Run tests
         shell: powershell
