--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,7 @@ jobs:
           $env:PATH="$env:SCOOP\shims;$env:PATH"
           scoop install allure
           [Environment]::SetEnvironmentVariable('PATH', $env:SCOOP + '\\apps\\allure\\current\\bin;' + [Environment]::GetEnvironmentVariable('PATH', [EnvironmentVariableTarget]::Machine), [EnvironmentVariableTarget]::Machine)
+          Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
           refreshenv
 
       - name: Run tests
