--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,9 @@ jobs:
           path: target/allure-results
 
       - name: Generate Allure Report
-        run: allure generate --clean
+        run: |
+          cd C:\Users\runneradmin\\scoop\apps\allure\current\bin
+          allure generate --clean
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
