--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,16 +41,23 @@ jobs:
           mvn clean test
         if: always()
 
-      - name: Download results
+      - name: Upload results
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: target/allure-results
 
+      - name: Download results
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-results
+          path: C:/artifacts
+
       - name: Generate Allure Report
+        shell: powershell
         run: |
-          cd C:\Users\runneradmin\\scoop\apps\allure\current\bin
-          allure generate --clean
+          cd C:\Users\runneradmin\scoop\apps\allure\current\bin
+          allure generate "C:/artifacts/allure-results" --clean
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
