--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,10 +58,10 @@ jobs:
         run: |
           cd C:\Users\runneradmin\scoop\apps\allure\current\bin
           Get-Location
-          .\allure generate "C:/artifacts/allure-results" --clean
+          .\allure generate -c allure-result -o _site --clean
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: actions/upload-pages-artifact@v3.0.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
+          name: ompk
+          retention-days: 2
