--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,7 +64,8 @@ jobs:
           cd C:
           cd \Users\runneradmin\scoop\apps\allure\current\bin
           Get-Location
-          ./allure generate -c C:/artifacts/allure-result -o C:/_site --clean
+          ./allure generate -c D:/a/FirstJavaTest/FirstJavaTest -o C:/_site --clean
+          #./allure generate -c C:/artifacts/allure-result -o C:/_site --clean
           #./allure generate -c "C:/artifacts/allure-result" -o "_site" --clean
 
       - name: Upload to GitHub Pages
