--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,16 +63,11 @@ jobs:
           name: allure-results
           path: C:/artifacts
 
-      #- name: Generate Allure Report
-       # shell: powershell
-       # run: |
-        #  allure generate -c -o C:/_site --clean
-
-      - name: Allure report
-        uses: simple-elf/allure-report-action@v1.9
-        with:
-          allure_results: C:/artifacts/allure-results
-          allure_report: C:/allure-report
+      - name: Generate Allure Report
+        shell: powershell
+        run: |
+          cd C:/artifacts
+          allure generate -c -o C:/allure-report
 
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3.0.1
