--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Generate Allure Report
         shell: powershell
         run: |
-          cd C:/artifacts
-          allure generate -c -o C:/allure-report
+          cd C:\Users\runneradmin\scoop\apps\allure\current\bin
+          allure generate "C:/artifacts/allure-results" -o C:/allure-report --clean
 
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3.0.1
