--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -69,7 +69,7 @@ jobs:
           cd C:
           cd \Users\runneradmin\scoop\apps\allure\current\bin
           Get-Location
-          allure generate "C:/artifacts/allure-results" -o C:/allure-report --clean
+          #allure generate "C:/artifacts/allure-results" -o C:/allure-report --clean
 
       - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v3.0.1
