--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: allure-results
-          path: C:/artifacts
+          path: C:/artifacts/allure-results
 
       - name: Generate Allure Report
         shell: powershell
