--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -121,7 +121,9 @@ jobs:
           openvpn3 config-import --config /tmp/config.ovpn --name CloudConnexa --persistent
           openvpn3 config-acl --show --lock-down true --grant root --config CloudConnexa
           sudo systemctl enable --now openvpn3-session@CloudConnexa.service
-          systemctl status openvpn3-session@CloudConnexa.service
+          openvpn3 session-start --config /tmp/config.ovpn
+          openvpn3 config-import --config /tmp/config.ovpn
+          openvpn3 session-start --config /tmp/config.ovpn
       #          openvpn3 session-start --config /tmp/config.ovpn
 
       - name: Run tests
