--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -108,17 +108,26 @@ jobs:
           name: config.ovpn
           path: VPN/config.ovpn
 
+      - name: Upload creds
+        uses: actions/upload-artifact@v4
+        with:
+          name: vpn_credentials.txt
+          path: VPN/vpn_credentials.txt
+
       - name: Download .ovpn
         uses: actions/download-artifact@v4
         with:
            name: config.ovpn
            path: /tmp
 
+      - name: Download creds
+        uses: actions/download-artifact@v4
+        with:
+           name: vpn_credentials.txt
+           path: /tmp
+
       - name: Install OpenVPN
         run: |
-          echo "${{ secrets.OPENVPN_USERNAME }}" > /tmp/auth.txt
-          echo "${{ secrets.OPENVPN_PASSWORD }}" >> /tmp/auth.txt
-          chmod 600 auth.txt
           sudo mkdir -p /etc/apt/keyrings && curl -fsSL https://packages.openvpn.net/packages-repo.gpg | sudo tee /etc/apt/keyrings/openvpn.asc
           DISTRO=$(lsb_release -c | awk '{print $2}')
           echo "deb [signed-by=/etc/apt/keyrings/openvpn.asc] https://packages.openvpn.net/openvpn3/debian $DISTRO main" | sudo tee /etc/apt/sources.list.d/openvpn-packages.list
@@ -128,7 +137,7 @@ jobs:
           openvpn3 config-acl --show --lock-down true --grant root --config CloudConnexa
           openvpn3 session-start --config /tmp/config.ovpn
           openvpn3 config-import --config /tmp/config.ovpn
-          openvpn3 session-start --config /tmp/config.ovpn
+          openvpn3 session-start --config /tmp/config.ovpn --auth-user-pass /tmp/vpn_credentials.txt
 
       - name: Run tests
         run: |
