--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>2.12.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.5.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
