--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,7 +103,7 @@ jobs:
           distribution: 'oracle'
 
       - name: Check Chrome version
-        run: which google-chrome
+        run: /usr/bin/google-chrome --version
 
       - name: Upload .ovpn
         uses: actions/upload-artifact@v4
