--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Connect to OpenVPN
         shell: powershell
         run: |
-          Start-Process -FilePath "C:\"Program Files"\OpenVPN\bin\openvpn.exe" -ArgumentList "--config C:\artifacts\config.ovpn" -NoNewWindow -PassThru
+          Start-Process -FilePath "C:\Program Files\OpenVPN\bin\openvpn.exe" -ArgumentList "--config C:\artifacts\config.ovpn" -NoNewWindow -PassThru
 
       - name: Wait for VPN connection
         run: |
